@@ -10,5 +10,6 @@ urlpatterns = (
     url(r'^plist/$', views.ProductList.as_view()),
     url(r'^p/(?P<pk>[0-9]+)/$', views.ProductDetail.as_view()),
     url(r'^orderbuy/$',views.OrderBuyReview.as_view()),
-    url(r'^confirm/$',views.OrderBuyConfirm.as_view()),
+    
+    url(r'^cancel/$', csrf_exempt(views.PINGPPCallbackView.as_view())),
 )
